; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_lpbb.c_lpbb_getsda.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_lpbb.c_lpbb_getsda.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SDA_in = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @lpbb_getsda to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lpbb_getsda(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @device_get_parent(i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @ppb_lock(i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @ppb_rstr(i32 %9)
  %11 = load i32, i32* @SDA_in, align 4
  %12 = and i32 %10, %11
  %13 = load i32, i32* @SDA_in, align 4
  %14 = icmp eq i32 %12, %13
  %15 = zext i1 %14 to i32
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @ppb_unlock(i32 %16)
  %18 = load i32, i32* %4, align 4
  ret i32 %18
}

declare dso_local i32 @device_get_parent(i32) #1

declare dso_local i32 @ppb_lock(i32) #1

declare dso_local i32 @ppb_rstr(i32) #1

declare dso_local i32 @ppb_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
